--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="./css/style.css">
+    <meta name="description" content="Booki est une agence de voyage en plein centre-ville et en pleine nature, qui propose des hébergements et des activités adaptées à vos besoins.">
 </head>
 
 <body>
@@ -45,8 +46,8 @@
                     <i class="fa-solid fa-location-dot"></i>
                 </div>
                 <input type="search" name="search" class="searchInput" id="#" placeholder="Marseille, France">
-                <button class="searchButton">Rechercher</button>
-                <button class="searchButtonMobile fa-solid fa-magnifying-glass"></button>
+                <button name="search" class="searchButton" aria-label="Rechercher">Rechercher</button>
+                <button name="search" class="searchButtonMobile fa-solid fa-magnifying-glass"  aria-label="Rechercher"></button>
             </form>
             <div class="filtersContainer">
                 <p class="filtersTitle">Filtres</p>
@@ -306,7 +307,7 @@
                 <a href="#">
                     <article class="activityOneCard">
                         <div class="activityCardImage">
-                            <img src="./images/activites/paul-hermann.jpg" alt="Fort de Pomègues">
+                            <img src="./images/activites/paul-hermann.jpg" alt="Fort-de-Pomègues">
                         </div>
                         <div class="activityCardTxt">
                             <h3 class="activityCardTitle">Fort de Pomègues</h3>
@@ -316,7 +317,7 @@
                 <a href="#">
                     <article class="activityOneCard">
                         <div class="activityCardImage">
-                            <img src="./images/activites/kilyan-sockalingum.jpg" alt="Parc national des Calanques">
+                            <img src="./images/activites/kilyan-sockalingum.jpg" alt="Parc-national-des-Calanques">
                         </div>
                         <div class="activityCardTxt">
                             <h3 class="activityCardTitle">Parc national des Calanques</h3>
@@ -326,7 +327,7 @@
                 <a href="#">
                     <article class="activityOneCard">
                         <div class="activityCardImage">
-                            <img src="./images/activites/florian-wehde.jpg" alt="Notre-Dame-de-la-Garde">
+                            <img src="./images/activites/florian-wehde.jpg" alt="Notre-Dame-de-la-Garde-Marseille">
                         </div>
                         <div class="activityCardTxt">
                             <h3 class="activityCardTitle">Notre-Dame-de-la-Garde</h3>
